--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,19 +8,19 @@
 
 
     <EditText
-        android:id="@+id/username1"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="User Name"
+        android:hint="Email"
         android:layout_marginTop="50dp"/>
 
     <EditText
         android:id="@+id/password1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Passwort"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/username1"/>
+        android:layout_below="@+id/email"/>
 
     <Button
         android:id="@+id/btnsignin1"
@@ -29,6 +29,16 @@
         android:text="Anmelden"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/password1"/>
+
+    <TextView
+        android:id="@+id/register_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnsignin1"
+        android:ems="50"
+        android:inputType="textPersonName"
+        android:text="Noch kein Konto? Registrieren!"
+        android:textSize="18dp" />
 
 
 </RelativeLayout>
