--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,19 @@
 
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="User Name"
+        android:hint="Email"
         android:layout_marginTop="50dp"/>
+
+    <EditText
+        android:id="@+id/vertragsID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Mitgliedsnummer"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/email"/>
 
     <EditText
         android:id="@+id/password"
@@ -21,7 +29,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/username"/>
+        android:layout_below="@+id/vertragsID"/>
 
     <EditText
         android:id="@+id/repassword"
@@ -43,7 +51,7 @@
         android:id="@+id/btnsignin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Anmelden"
+        android:text="Schon registriert? Anmelden!"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/btnsignup"/>
 
