--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
+
+    <TextView
+        android:id="@+id/welcomeUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="50"
+        android:inputType="textPersonName"
+        android:text="Hallo!"
+        android:textSize="18dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
