- added logic to profil data - display profil data in profil view - fix bug where fragment does not update profile data

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,13 +15,12 @@
         android:layout_above="@+id/bottomView" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomView"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"
         app:labelVisibilityMode="labeled"
-        />
+        app:menu="@menu/bottom_nav_menu" />
 
 
 
