--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -197,6 +197,20 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/vertragAlsPdf"
+                android:text="Vertrag herunterladen als pdf"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/kuendigungVormerken"
+                android:text="Kündigung vormerken"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
         </LinearLayout>
 
     </RelativeLayout>
