--- a/app/src/main/res/layout/abmelden.xml
+++ b/app/src/main/res/layout/abmelden.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:src="@drawable/ic_email"
+                android:src="@drawable/logout"
                 android:padding="2dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
