--- a/app/src/main/res/layout/vertragsdaten_ansehen.xml
+++ b/app/src/main/res/layout/vertragsdaten_ansehen.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:src="@drawable/ic_email"
+                android:src="@drawable/contract_icon"
                 android:padding="2dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
