Changed Design of Home and functionalities.

--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -59,11 +59,12 @@
     </RelativeLayout>
 
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/photo_profil"
         android:layout_width="98dp"
         android:layout_height="98dp"
         android:layout_centerHorizontal="true"
         android:elevation="15dp"
         android:padding="5dp"
-        android:src="@drawable/slider"
+        android:src="@drawable/nutzer"
         app:shapeAppearanceOverlay="@style/Circular" />
 </RelativeLayout>
