--- a/app/src/main/res/layout/item_recycler_.xml
+++ b/app/src/main/res/layout/item_recycler_.xml
@@ -45,7 +45,7 @@
         android:layout_height="7dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_Time"
-        android:background="@drawable/circle_"
+        android:background="@drawable/circlenotused"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintBottom_toBottomOf="@id/tvTotalTime"
