--- a/app/src/main/res/layout/vertragdetails.xml
+++ b/app/src/main/res/layout/vertragdetails.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/start"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -55,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/vertragsbeginn_txt"
                     android:text="28.02.2022"
                     android:textSize="17sp"
                     android:paddingLeft="20sp"
@@ -81,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/location"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -110,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/standort_txt"
                     android:text="FutureFitness Frankfurt"
                     android:textSize="17sp"
                     android:paddingLeft="20sp"
@@ -132,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/moneybag"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -153,6 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/mitgliedsbeitrag_txt"
                 android:text="28,99€"
                 android:textSize="17sp"
                 android:paddingLeft="20sp"
@@ -174,7 +177,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/walock"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -195,6 +198,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/abrechnungstag_txt"
                 android:text="Monatlich zum 13."
                 android:textSize="17sp"
                 android:paddingLeft="20sp"
@@ -217,7 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/fishing"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -238,8 +242,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/vertragsende_txt"
                 android:text="28.02.2024"
                 android:textSize="17sp"
+
                 android:paddingLeft="20sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -251,44 +257,7 @@
             android:layout_width="match_parent"
             android:paddingTop="15dp"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:padding="1dp"
-                android:gravity="center"
-                android:layout_alignParentStart="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:padding="5dp"
-                    android:src="@drawable/refresh"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"/>
-                <TextView
-                    android:text="Automatische Verlängerung am"
-                    android:textSize="16sp"
-                    android:layout_margin="5dp"
-                    android:textStyle="bold|normal"
-                    android:textColor="#F8554A4A"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-
-            </LinearLayout>
         </RelativeLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:text="28.01.2024"
-                android:textSize="17sp"
-                android:paddingLeft="20sp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:paddingTop="15dp"
@@ -301,7 +270,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:padding="5dp"
+                    android:padding="9dp"
                     android:src="@drawable/fireit"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
@@ -322,6 +291,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/kuendigungVormerkung_txt"
                 android:text="Keine Vormerkung"
                 android:textSize="17sp"
                 android:paddingLeft="20sp"
